    ADDED: you can now cancel creating and verifying checksums
    ADDED: a (missing) shortcut to bookmark current item (ctrl-shift-d)
    ADDED: Lithuanian translation (thanks Dovydas Sankauskas)
    ADDED: you can turn off sending CDs to the terminal emulator (general tab)

    FIXED: krarc reports 000 permission for bz2 files
    FIXED: bug in checksum module regarding names with spaces
    FIXED: konfigurator minor fixes
    FIXED: viewer, the tabs were identified by its page index, which can change
    FIXED: searcher: space means logical OR "text1 text2" == "*text1* || *text2*"
    FIXED: krarc cannot step into those archives which name contains '#'
    FIXED: viewer doesn't warning to save the window at close, and ignores "Cancel" button
    FIXED: locate dialog doesn't close when exiting krusader
    FIXED: UserAction: Crash when a programm wrote to stderr but only stdout was collected
           (Thanks to Shao Lo)
    FIXED: searcher crash when clicking onto an empty field after the results
    FIXED: disk usage crash on remote vfs because of recursion
    FIXED: [ 1262907 ] crash when closing an sftp tab which is loading

1.70.0-beta1 hellfire
=====================
    ADDED: KrSqueezedTextLabel can now specify the area in the string to be always visible
    ADDED: when searching for text inside file, the first line containing the text is displayed
    ADDED: checksum module now supports the cfv tool (for md5 and sha1)
    ADDED: QuickNavigation: hold ctrl and move the mouse over the url bar to see !
    ADDED: new checksum creation/verification mechanism (see mail titled "new checksum feature" to krusader-devel)
    ADDED: alt-ctrl-s creates a new symlink
    ADDED: ctrl-h opens history on the current panel
    ADDED: Nicer application search results
    ADDED: i18n multiple plural support (thanks Vaclav Juza)
    ADDED: right click menu -> trash, delete, shred options
    ADDED: column types can be changed and saved individually to each panel