@@ -3,6 +3,7 @@
     ADDED: Lithuanian translation (thanks Dovydas Sankauskas)
     ADDED: you can turn off sending CDs to the terminal emulator (general tab)
 
+    FIXED: KDE 3.4, starting from profile misses the active tab which causes inconsistent state
     FIXED: krarc reports 000 permission for bz2 files
     FIXED: bug in checksum module regarding names with spaces
     FIXED: konfigurator minor fixes
